me-carousel.scss: add: "height: auto" to help fix image layout shifting

--- a/www/css/me-carousel.scss
+++ b/www/css/me-carousel.scss
@@ -65,6 +65,7 @@ form {
         padding: 16px;
         img {
           width: 100%;
+          height: auto;
           object-fit: cover;
           aspect-ratio: 16/9;
         }
